# Flam

./: .gitignore  README.md
android-code/app/: build.gradle
android-code/app/src/main/: AndroidManifest.xml
android-code/app/src/main/cpp/: CMakeLists.txt  flam_native.cpp
android-code/app/src/main/java/com/example/flam/: FlamGLSurfaceView.kt  GLRenderer.kt  MainActivity.kt  NativeUtils.kt
web-viewer/: index.html  package.json
web-viewer/src/: main.ts
